--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "**/*.{tsx,ts,jsx,js}": "eslint --fix"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
