--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sentry/nextjs": "^8.42.0",
     "@tanstack/react-query": "^5.62.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
