--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.17.9",
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
