--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/gtag.js": "^0.0.20",
     "@types/node": "^20.17.9",
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
