--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
     "jotai": "^2.10.3",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.468.0",
     "next": "14.2.20",
     "react": "^18.3.1",
